fix bugs
1. Game was not showing any alert for invalid code.
2. Not showing any message after losing.

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ div.code_pegs {
 
 .check_btn {
   font-size: 16px;
-  margin-right: 60px;
+  
   margin-top: 14px;
   padding: 3px 12px;
   border-radius: 5px;
